--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ button:hover {
 
 footer .menu__item:nth-child(6) a {
   transform: rotate(-300deg);
-  color: #e1306c;
+  color: #eaf7f6;
 }
 
 h2{
